// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render AboutPage correctly 1`] = `
<div
  className="help-page-container"
>
  About Us
</div>
`;

exports[`Should render NotFoundPage correctly 1`] = `
<div
  className="help-page-container"
>
  <h1>
    404!
  </h1>
</div>
`;
